change layout; fix inline code word wrap

--- a/assets/themes/hooligan-ex/_sass/_base.scss
+++ b/assets/themes/hooligan-ex/_sass/_base.scss
@@ -21,7 +21,7 @@ body {
   text-shadow:1px 1px 1px #000;
   height:100%;
   font-family: 'Oxygen', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -61,7 +61,9 @@ h2 {
 
 pre, code {
 	color:#ccc;
-    font-family: "Inconsolata", normal;
+    font-family: "InconsolataMedium", monospace;
+    font-size: 14px;
+    white-space: pre;
 }
 
 pre > code {
@@ -150,8 +152,8 @@ hr {
 	background: #202020;
 	background-color: rgba(0, 0, 0, 0.3);
 	border:none;
-	padding: 20px 20px 10px;
-	margin: 0px -20px 20px;
+	padding: 10px;
+	// margin: 0px -20px 20px;
 	z-index: 0;
 	@include border-bottom-left-radius;
 	@include border-bottom-right-radius;
