--- a/assets/themes/hooligan-ex/css/style.css
+++ b/assets/themes/hooligan-ex/css/style.css
@@ -17,7 +17,7 @@ body {
   text-shadow: 1px 1px 1px #000;
   height: 100%;
   font-family: 'Oxygen', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 /* line 27, ../_sass/_base.scss */
@@ -68,10 +68,12 @@ h2 {
 /* line 62, ../_sass/_base.scss */
 pre, code {
   color: #ccc;
-  font-family: "Inconsolata", normal;
+  font-family: "InconsolataMedium", monospace;
+  font-size: 14px;
+  white-space: pre;
 }
 
-/* line 67, ../_sass/_base.scss */
+/* line 69, ../_sass/_base.scss */
 pre > code {
   /* Reset box-shadow for pygments */
   font-size: 14px;
@@ -82,7 +84,7 @@ pre > code {
   -o-box-shadow: none;
 }
 
-/* line 77, ../_sass/_base.scss */
+/* line 79, ../_sass/_base.scss */
 hr {
   border: none;
   background: rgba(0, 0, 0, 0.7);
@@ -90,11 +92,11 @@ hr {
 }
 
 /* Layout */
-/* line 84, ../_sass/_base.scss */
+/* line 86, ../_sass/_base.scss */
 .navbar {
   margin-bottom: 0;
 }
-/* line 86, ../_sass/_base.scss */
+/* line 88, ../_sass/_base.scss */
 .navbar div.navbar-inner {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
@@ -102,55 +104,55 @@ hr {
   -o-border-radius: 0;
   border-radius: 0;
 }
-/* line 88, ../_sass/_base.scss */
+/* line 90, ../_sass/_base.scss */
 .navbar div.navbar-inner a.brand {
   padding: 10px 20px;
 }
-/* line 93, ../_sass/_base.scss */
+/* line 95, ../_sass/_base.scss */
 .navbar div.navbar-inner ul.nav:first-child li a {
   padding: 12px 10px 8px;
 }
 
-/* line 102, ../_sass/_base.scss */
+/* line 104, ../_sass/_base.scss */
 .container > footer {
   margin-top: 20px;
   clear: both;
 }
 
-/* line 106, ../_sass/_base.scss */
+/* line 108, ../_sass/_base.scss */
 .container > footer p {
   text-align: center;
   /* center align it with the container */
 }
 
 /* Content */
-/* line 113, ../_sass/_base.scss */
+/* line 115, ../_sass/_base.scss */
 .content {
   /* when there's no page-header */
   /* Wide column content */
 }
-/* line 114, ../_sass/_base.scss */
+/* line 116, ../_sass/_base.scss */
 .content img {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.8);
 }
-/* line 118, ../_sass/_base.scss */
+/* line 120, ../_sass/_base.scss */
 .content.no-header {
   padding-top: 40px;
 }
-/* line 125, ../_sass/_base.scss */
+/* line 127, ../_sass/_base.scss */
 .content div.row div.span8 > img {
   display: block;
   margin: 10px auto;
 }
-/* line 131, ../_sass/_base.scss */
+/* line 133, ../_sass/_base.scss */
 .content div.row div.span4 h4 {
   margin-top: 10px;
 }
-/* line 133, ../_sass/_base.scss */
+/* line 135, ../_sass/_base.scss */
 .content div.row div.span4 h4:first {
   margin-top: 0;
 }
-/* line 137, ../_sass/_base.scss */
+/* line 139, ../_sass/_base.scss */
 .content p {
   padding-bottom: 15px;
   line-height: 25px;
@@ -158,7 +160,7 @@ hr {
 }
 
 /* Page header tweaks */
-/* line 145, ../_sass/_base.scss */
+/* line 147, ../_sass/_base.scss */
 .page-header {
   -webkit-box-shadow: rgba(255, 255, 255, 0.1) 0 1px 0, rgba(0, 0, 0, 0.8) 0 1px 7px 0px inset;
   -moz-box-shadow: rgba(255, 255, 255, 0.1) 0 1px 0, rgba(0, 0, 0, 0.8) 0 1px 7px 0px inset;
@@ -166,8 +168,7 @@ hr {
   background: #202020;
   background-color: rgba(0, 0, 0, 0.3);
   border: none;
-  padding: 20px 20px 10px;
-  margin: 0px -20px 20px;
+  padding: 10px;
   z-index: 0;
   -moz-border-radius-bottomleft: 5px;
   -webkit-border-bottom-left-radius: 5px;
@@ -176,19 +177,19 @@ hr {
   -webkit-border-bottom-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
-/* line 158, ../_sass/_base.scss */
+/* line 160, ../_sass/_base.scss */
 .page-header h1 {
   color: #eee;
   margin-bottom: 0;
 }
 
-/* line 164, ../_sass/_base.scss */
+/* line 166, ../_sass/_base.scss */
 .topbar .btn {
   border: 0;
 }
 
 /* Pagination */
-/* line 171, ../_sass/_base.scss */
+/* line 173, ../_sass/_base.scss */
 div.pagination li a {
   -webkit-box-shadow: 0px 1px 1px black;
   -moz-box-shadow: 0px 1px 1px black;
@@ -196,7 +197,7 @@ div.pagination li a {
 }
 
 /* Buttons */
-/* line 179, ../_sass/_base.scss */
+/* line 181, ../_sass/_base.scss */
 a.btn, a.btn.disabled {
   color: rgba(255, 255, 255, 0.7);
   text-shadow: 1px 1px 2px #000;
@@ -206,44 +207,44 @@ a.btn, a.btn.disabled {
   -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0 1px 0, rgba(255, 255, 255, 0.5) 0 1px 1px 0px inset;
   -o-box-shadow: rgba(255, 255, 255, 0.1) 0 1px 0, rgba(0, 0, 0, 0.8) 0 1px 7px 0px inset;
 }
-/* line 190, ../_sass/_base.scss */
+/* line 192, ../_sass/_base.scss */
 a.btn:hover, a.btn.disabled:hover {
   background: rgba(255, 255, 255, 0.05);
 }
-/* line 193, ../_sass/_base.scss */
+/* line 195, ../_sass/_base.scss */
 a.btn.disabled, a.btn.disabled.disabled {
   color: rgba(255, 255, 255, 0.3);
 }
 
 /* Tags */
-/* line 199, ../_sass/_base.scss */
+/* line 201, ../_sass/_base.scss */
 .tag_box {
   list-style: none;
   margin: 0;
   padding: 5px 0;
   overflow: hidden;
 }
-/* line 205, ../_sass/_base.scss */
+/* line 207, ../_sass/_base.scss */
 .tag_box.inline li {
   float: left;
 }
-/* line 209, ../_sass/_base.scss */
+/* line 211, ../_sass/_base.scss */
 .tag_box li {
   line-height: 28px;
 }
-/* line 213, ../_sass/_base.scss */
+/* line 215, ../_sass/_base.scss */
 .tag_box a.active {
   background: #57A957;
   border: 1px solid #4C964D;
   color: #FFF;
 }
-/* line 218, ../_sass/_base.scss */
+/* line 220, ../_sass/_base.scss */
 .tag_box a span {
   vertical-align: super;
   font-size: 0.8em;
 }
 
-/* line 226, ../_sass/_base.scss */
+/* line 228, ../_sass/_base.scss */
 .tag_box.inline a,
 .tag_box a {
   padding: 3px 6px;
@@ -256,44 +257,44 @@ a.btn.disabled, a.btn.disabled.disabled {
   -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0 1px 0, rgba(255, 255, 255, 0.5) 0 1px 1px 0px inset;
   -o-box-shadow: rgba(255, 255, 255, 0.1) 0 1px 0, rgba(0, 0, 0, 0.8) 0 1px 7px 0px inset;
 }
-/* line 238, ../_sass/_base.scss */
+/* line 240, ../_sass/_base.scss */
 .tag_box.inline a:hover,
 .tag_box a:hover {
   background: rgba(255, 255, 255, 0.3);
 }
 
 /* Page-specific */
-/* line 245, ../_sass/_base.scss */
+/* line 247, ../_sass/_base.scss */
 div.content div#page-index {
   padding-top: 30px !important;
 }
 
 /* Zocial Overrides */
-/* line 251, ../_sass/_base.scss */
+/* line 253, ../_sass/_base.scss */
 .navbar a.zocial {
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
 
-/* line 257, ../_sass/_base.scss */
+/* line 259, ../_sass/_base.scss */
 .zocial.googleplus:focus,
 .zocial.googleplus:hover {
   color: #e01d30 !important;
 }
 
-/* line 262, ../_sass/_base.scss */
+/* line 264, ../_sass/_base.scss */
 .zocial.twitter:focus,
 .zocial.twitter:hover {
   color: #46c0fb !important;
 }
 
-/* line 267, ../_sass/_base.scss */
+/* line 269, ../_sass/_base.scss */
 .zocial.linkedin:focus,
 .zocial.linkedin:hover {
   color: #50a1cb !important;
 }
 
-/* line 272, ../_sass/_base.scss */
+/* line 274, ../_sass/_base.scss */
 .zocial.rss:focus,
 .zocial.rss:hover {
   color: #fb9d3a !important;
